--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,7 +50,7 @@
     <dimen name="settings_user_image_marginTop">-75dp</dimen>
     <dimen name="settings_user_picture_margin">3dp</dimen>
     <dimen name="grey_border_stroke_size">1dp</dimen>
-    <dimen name="grey_border_radius">2dp</dimen>
+    <dimen name="grey_border_radius">5dp</dimen>
     <dimen name="settings_edit_label_marginStartEnd">10dp</dimen>
     <dimen name="settings_edit_label_marginTopBottom">5dp</dimen>
     <dimen name="settings_edit_label_textSize">14sp</dimen>
@@ -91,7 +91,7 @@
 
     <!--dimens of product details activity-->
     <!--START-->
-    <dimen name="product_detail_image_height">250dp</dimen>
+    <dimen name="product_detail_image_height">300dp</dimen>
     <dimen name="product_details_title_price_marginTop">16dp</dimen>
     <dimen name="product_details_title_price_padding">16dp</dimen>
     <dimen name="product_details_title_textSize">16sp</dimen>
@@ -131,6 +131,12 @@
     <dimen name="cart_quantity_textSize">12sp</dimen>
     <dimen name="ib_add_cart_item_marginStart">5dp</dimen>
     <dimen name="ib_add_cart_item_marginEnd">16dp</dimen>
-
+    <!--END-->
+    <!--dimensions for address layout  -->
+    <!--START-->
+    <dimen name="btn_add_address_margin">16dp</dimen>
+    <dimen name="btn_add_address_padding">16dp</dimen>
+    <dimen name="add_address_textSize">18sp</dimen>
+    <dimen name="rv_address_list_marginTop">16dp</dimen>
     <!--END-->
 </resources>
