--- a/app/src/main/res/drawable/drawable_gender_tab_selector.xml
+++ b/app/src/main/res/drawable/drawable_gender_tab_selector.xml
@@ -12,12 +12,14 @@
         />
     </shape>
 </item>
-<item android:state_checked="false">
-        <shape android:shape="rectangle">
+<item
+    android:state_checked="false">
+           <shape android:shape="rectangle">
 
             <stroke android:width="@dimen/gender_radio_button_stroke_width"
-                android:color="@color/colorSecondaryText"/>
-            <corners android:bottomLeftRadius="@dimen/gender_radio_button_radius"
+                    android:color="@color/colorSecondaryText"/>
+            <corners
+                android:bottomLeftRadius="@dimen/gender_radio_button_radius"
                 android:bottomRightRadius="@dimen/gender_radio_button_radius"
                 android:topLeftRadius="@dimen/gender_radio_button_radius"
                 android:topRightRadius="@dimen/gender_radio_button_radius"
