--- a/app/src/main/res/layout/item_address_layout.xml
+++ b/app/src/main/res/layout/item_address_layout.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/item_address_marginTop"
-    android:background="@color/white"
+    android:background="@color/color_off_white"
     android:orientation="vertical"
     android:paddingStart="@dimen/item_address_paddingStartEnd"
     android:paddingTop="@dimen/item_address_paddingTopBottom"
     android:paddingEnd="@dimen/item_address_paddingStartEnd"
-    android:paddingBottom="@dimen/item_address_paddingTopBottom">
+    android:paddingBottom="@dimen/item_address_paddingTopBottom"
+  android:layout_margin="5dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
