--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -107,7 +107,7 @@
     <!--START-->
     <dimen name="rv_cart_items_marginTop">16dp</dimen>
     <dimen name="ll_checkout_padding">16dp</dimen>
-    <dimen name="checkout_label_value_textSize">18sp</dimen>
+    <dimen name="checkout_label_value_textSize">15sp</dimen>
     <dimen name="no_data_found_textSize">15sp</dimen>
     <!--END-->
     <!--dimens of cart item list layout-->
@@ -146,13 +146,25 @@
     <!--END-->
     <!--item address recycler view-->
     <!--START-->
-    <dimen name="item_address_marginTop">16dp</dimen>
+    <dimen name="item_address_marginTop">10dp</dimen>
     <dimen name="item_address_paddingStartEnd">16dp</dimen>
     <dimen name="item_address_paddingTopBottom">10dp</dimen>
-    <dimen name="item_address_name_textSize">18sp</dimen>
+    <dimen name="item_address_name_textSize">15sp</dimen>
     <dimen name="item_address_type_paddingStartEnd">10dp</dimen>
     <dimen name="item_address_type_paddingTopBottom">2dp</dimen>
     <dimen name="address_details_textSize">14sp</dimen>
     <dimen name="address_details_marginTop">2dp</dimen>
+    <!--END-->
+    <!--dimens of checkout activity-->
+    <!--START-->
+    <dimen name="checkout_content_marginStartEnd">16dp</dimen>
+    <dimen name="checkout_content_marginTopBottom">10dp</dimen>
+    <dimen name="checkout_content_lbl_padding">2dp</dimen>
+    <dimen name="checkout_lbl_textSize">14sp</dimen>
+    <dimen name="checkout_content_paddingStartEnd">16dp</dimen>
+    <dimen name="checkout_content_paddingTopBottom">10dp</dimen>
+    <dimen name="ll_checkout_place_order_padding">16dp</dimen>
+    <dimen name="ll_checkout_items_receipt">16dp</dimen>
+
     <!--END-->
 </resources>
