--- a/app/src/main/res/layout/fragment_sold_products.xml
+++ b/app/src/main/res/layout/fragment_sold_products.xml
@@ -6,29 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_off_white"
-    tools:context=".ui.fragments.OrdersFragment"
-    >
+    tools:context=".ui.fragments.SoldProductsFragment">
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragment_orders_rv_my_order_items"
+        android:id="@+id/rv_sold_product_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <com.example.myshoppal.utils.MSPTextViewRegular
-        android:id="@+id/fragment_orders_tv_no_orders_found"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_no_sold_products_found"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/msg_nothing_to_display"
+        android:text="@string/no_products_sold_yet"
         android:textAlignment="center"
-        android:textColor="@color/colorSecondaryText"
         android:textSize="@dimen/no_data_found_textSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
